--- a/movie-trailers/src/App.css
+++ b/movie-trailers/src/App.css
@@ -1,7 +1,8 @@
 .App {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  padding: 0
+  /* margin: 0;
+  padding: 0; */
   /* width: 95%;
   display: flex;
   flex-direction: column;
